# coinspot-python-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
src/coinspot/: __init__.py  coinspot.py  coinspot_types.py
tests/: setup_environment.py  test_coinspot.py
